--- a/frontend/src/components/navigation/navigation.component.scss
+++ b/frontend/src/components/navigation/navigation.component.scss
@@ -1,3 +1,33 @@
 #navbar__left {
     background-color: #1349B0;
 }
+
+#navbar__right {
+    background-color: #F0F2F4;
+    transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
+
+    #project__details,
+    #navbar__right__actions {
+        width: calc(330px - 3rem);
+    }
+
+    #navbar__right__actions {
+
+        .actions__action {
+
+            a {
+                color: #666;
+                background-color: transparent;
+
+                &:hover,
+                &.active {
+                    background-color: darken(#F0F2F4, 4);
+                }
+
+                &.active {
+                    color: #10419C;
+                }
+            }
+        }
+    }
+}
