--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,7 +1,20 @@
-.loader {
-    background-color: rgba(0, 0, 0, 0.25);
-    z-index: 99999;
+#loader {
+    background-color: #eee;;
+    width: calc(100% - 4rem);
+    opacity: 0;
+    visibility: hidden;
+    transition: width 300ms cubic-bezier(0.2, 0, 0, 1), visibility 100ms ease-out, opacity 100ms ease-out;
+
+    &.loading {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    #loader__spinner {
+        @apply w-6 h-6 !important;
+    }
 }
+
  #app {
      min-height: 100vh;
  }
