--- a/frontend/src/pages/board/board.component.html
+++ b/frontend/src/pages/board/board.component.html
@@ -1,9 +1,9 @@
-<div id="board" class="p-8">
+<div id="board" class="p-8 w-full h-full flex flex-col">
     <h1 class="mb-12 leading-tight text-2xl font-bold">Board</h1>
     <section id="board__topbar_filters">
         <div id="board__topbar_filters__search" class="relative">
-            <input clrInput placeholder="Search" [(ngModel)]="topBarFilterSearch" class="bg-gray-200 py-1 pl-2 pr-6" />
-            <clr-icon shape="search" class="relative -ml-5"></clr-icon>
+            <input clrInput placeholder="Search" [(ngModel)]="topBarFilterSearch" class="bg-gray-200 py-1 pl-1 pr-5" />
+            <clr-icon shape="search" class="absolute right-1 top-0 h-full"></clr-icon>
         </div>
         <div id="board__topbar_filters__users">
 
@@ -11,5 +11,17 @@
         <div id="board__topbar_filters__tags">
 
         </div>
+    </section>
+    <section id="board__issues" class="mt-8">
+        <ul>
+            <li *ngFor="let list of issues$ | async">
+                <div class="list_title">{{ list.listTitle }}</div>
+                <ul class="list_issues">
+                    <li *ngFor="let issue of list.issues">
+                        <span>{{ issue.title }}</span>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </section>
 </div>
