--- a/frontend/src/pages/board/board.component.html
+++ b/frontend/src/pages/board/board.component.html
@@ -1,6 +1,6 @@
-<div id="board" class="p-8 w-full h-full flex flex-col">
-    <h1 class="mb-12 leading-tight text-2xl font-bold">Board</h1>
-    <section id="board__topbar_filters">
+<div id="board" class="w-full h-full flex flex-col">
+    <h1 class="mt-8 mx-8 leading-tight text-2xl font-bold">Board</h1>
+    <section id="board__topbar_filters" class="mt-12 mx-8">
         <div id="board__topbar_filters__search" class="relative">
             <input clrInput placeholder="Search" [(ngModel)]="topBarFilterSearch" class="bg-gray-200 py-1 pl-1 pr-5" />
             <clr-icon shape="search" class="absolute right-1 top-0 h-full"></clr-icon>
@@ -12,13 +12,26 @@
 
         </div>
     </section>
-    <section id="board__issues" class="mt-8">
-        <ul>
-            <li *ngFor="let list of issues$ | async">
-                <div class="list_title">{{ list.listTitle }}</div>
-                <ul class="list_issues">
-                    <li *ngFor="let issue of list.issues">
-                        <span>{{ issue.title }}</span>
+    <section id="board__issues" class="flex overflow-x-auto" [ngClass]="{ 'expanded': !(navbarQuery.isExpanded$ | async) }">
+        <ul class="flex p-8">
+            <li *ngFor="let list of issues$ | async" class="list flex-initial">
+                <div class="list_header px-3 py-2 flex">
+                    <h4 class="list_title text-xs font-bold text-black inline-block">{{ list.title }}</h4>
+                    <span class="list_issues ml-2 text-xs text-gray-700 font-light">{{ list.issues.length }}</span>
+                </div>
+                <ul class="list_issues flex flex-col m-0 p-2">
+                    <li *ngFor="let issue of list.issues" class="issue bg-white p-2 shadow cursor-move border-solid border-2 border-transparent hover:bg-gray-200 hover:border-gray-300">
+                        <h5 class="issue_title text-sm text-gray-900 cursor-pointer hover:underline">{{ issue.title }}</h5>
+                        <div class="issue_metadata mt-3 flex">
+                            <div class="issue_priority mr-2 tooltip tooltip-sm tooltip-bottom-right" [ngClass]="'issue_priority_' + issue.priority.toLowerCase()">
+                                <clr-icon class="is-solid" size="22" [attr.shape]="issuePriorityIcons[issue.priority]" [style.color]="issuePriorityColors[issue.priority]"></clr-icon>
+                                <span class="tooltip-content">{{ issue.priority }}</span>
+                            </div>
+                            <div class="issue_category tooltip tooltip-sm tooltip-bottom-right" [ngClass]="'issue_category_' + issue.category.toLowerCase()">
+                                <clr-icon class="is-solid opacity-50" size="22" [attr.shape]="issueCategoryIcons[issue.category]" [style.color]="issueCategoryColors[issue.category]"></clr-icon>
+                                <span class="tooltip-content">{{ issue.category }}</span>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </li>
