Drag and drop ready

--- a/frontend/src/pages/board/board.component.scss
+++ b/frontend/src/pages/board/board.component.scss
@@ -19,12 +19,16 @@
         }
 
         .list_header {
-            background-color: #FAFAFA;
             border-bottom: 1px solid #dbdbdb;
             border-radius: 0.25rem 0.25rem 0 0;
         }
 
         .list_issues {
+
+            &.cdk-drop-list-dragging .issue:not(.cdk-drag-placeholder),
+            .issue__drag_placeholder {
+                transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+            }
 
             .issue {
 
@@ -39,6 +43,16 @@
                     }
                 }
             }
+
+            .issue__drag_placeholder {
+                border-width: 1px;
+                margin: 0.5rem 0;
+                min-height: 5rem;
+            }
         }
     }
+}
+
+.cdk-drag-preview {
+    @apply shadow-xl border-gray-400;
 }
