--- a/frontend/src/pages/board/board.component.html
+++ b/frontend/src/pages/board/board.component.html
@@ -13,14 +13,15 @@
         </div>
     </section>
     <section id="board__issues" class="flex overflow-x-auto" [ngClass]="{ 'expanded': !(navbarQuery.isExpanded$ | async) }">
-        <ul class="flex p-8">
-            <li *ngFor="let list of issues$ | async" class="list flex-initial">
-                <div class="list_header px-3 py-2 flex">
+        <ul cdkDropListGroup class="flex p-8">
+            <li *ngFor="let list of issues$ | async" class="list flex flex-col">
+                <div class="list_header bg-white px-3 py-2 flex">
                     <h4 class="list_title text-xs font-bold text-black inline-block">{{ list.title }}</h4>
                     <span class="list_issues ml-2 text-xs text-gray-700 font-light">{{ list.issues.length }}</span>
                 </div>
-                <ul class="list_issues flex flex-col m-0 p-2">
-                    <li *ngFor="let issue of list.issues" class="issue bg-white p-2 shadow cursor-move border-solid border-2 border-transparent hover:bg-gray-200 hover:border-gray-300">
+                <ul cdkDropList [id]="list.title" [cdkDropListData]="list.issues" (cdkDropListDropped)="drop($event)" class="list_issues flex-grow flex flex-col m-0 p-2">
+                    <li *ngFor="let issue of list.issues" cdkDrag [cdkDragData]="issue" class="issue list-none bg-white m-0 p-2 shadow cursor-move border-solid border-2 border-transparent hover:border-gray-400">
+                        <div class="issue__drag_placeholder border-dashed border-gray-400 bg-gray-300 shadow" *cdkDragPlaceholder></div>
                         <h5 class="issue_title text-sm text-gray-900 cursor-pointer hover:underline">{{ issue.title }}</h5>
                         <div class="issue_metadata mt-3 flex">
                             <div class="issue_priority mr-2 tooltip tooltip-sm tooltip-bottom-right" [ngClass]="'issue_priority_' + issue.priority.toLowerCase()">
