Edit issue modal

--- a/frontend/src/components/navigation/navigation.component.html
+++ b/frontend/src/components/navigation/navigation.component.html
@@ -58,7 +58,7 @@
                         <div class="icon">
                             <clr-icon shape="view-columns" size="32"></clr-icon>
                         </div>
-                        <span class="ml-4 text-sm font-bold opacity-75">Board</span>
+                        <span class="ml-4 text-sm font-bold opacity-75">Dashboard</span>
                     </a>
                 </li>
                 <li class="actions__action">
